<resources>
    <string name="app_name">StayFit</string>
    <string name="enter_name">Enter name here</string>
    <string name="user_phone_number">Enter phone number here</string>
    <string name="user_age">Enter your age here</string>
    <string name="user_height">Enter your height here</string>
    <string name="user_weight">Enter your weight here</string>
    <string name="submit_button">Submit</string>
    <string name="user_address">Enter your address</string>
    <string name="take_atleast">You must take atleast</string>
    <string name="default_calories">0000</string>
    <string name="calories_per_day">calories per day</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="google_signup">Sign Up with google</string>
    <string name="user_cit">Dear user</string>
    <string name="title_activity_home_screen_nav_bar">HomeScreenNavBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">User Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="find_us">Find us On our official social media and stay connected with us.</string>
    <string name="app_version">1.1.00</string>
    <string name="versionTV">version</string>
    <string name="dev_TV">Developers</string>
    <string name="dev1">Anmol Thakur</string>
    <string name="dev2">Kunwarpal Singh</string>
    <string name="dev3">Sachin Ghimire</string>
    <string name="dev4">Paul</string>
    <string name="contact_TV">Contact Us</string>
    <string name="weight_goal_text">Set Your Weight Goal</string>
    <string name="user_entry_goal_weight">Enter your goal weight here</string>
    <string name="current_weight_tv">Current Weight</string>
    <string name="sample_weight">XX.XKgs</string>
    <string name="goal_progress">Goal Progress</string>
    <string name="display_weight_goal">0 of 0 Kgs Lost</string>
    <string name="ok">OK</string>
    <string name="user_current_weight">Current Weight</string>
    <string name="intial_user_weight">0</string>
    <string name="num_glasses_per_day">0 of 9 Glasses</string>
    <string name="one_glass_capacity">1 Glass (250ml)</string>
    <string name="meals_done">Done</string>
</resources>
