<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:background="#6638e2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_progress"
            android:layout_gravity="center_horizontal"
            android:textSize="27sp"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/display_user_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_weight_goal"
            android:layout_gravity="center_horizontal"
            android:textSize="33sp"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="45dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageButton
            android:layout_width="60dp"
            android:id="@+id/decrease_weight"
            android:layout_height="60dp"
            android:src="@drawable/minus"
            android:scaleType="fitXY"
            android:layout_marginStart="15dp"
            android:background="@android:color/background_light"
            android:padding="10dp"/>
        <LinearLayout
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/current_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_current_weight"
                android:text="@string/intial_user_weight"
                android:inputType="numberDecimal"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:textSize="35sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/current_weight_tv"/>
        </LinearLayout>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/increase_weight"
            android:src="@drawable/plus_goals"
            android:scaleType="fitXY"
            android:background="@android:color/background_light"
            android:padding="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/weight_goals" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_goal_text"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_entry_goal_weight"
                android:id="@+id/goal_weight"
                android:inputType="numberDecimal"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/display_changes"
        android:text="@string/ok"
        android:onClick="displayChanges"
        android:background="@drawable/button_level_main"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
</LinearLayout>