<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaloriePerDay">
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/bg_calorie2" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/calorie_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignStart="@+id/imageView1"
        android:layout_alignEnd="@+id/imageView1"
        android:layout_centerVertical="true"
        android:alpha="0.5"
        android:layout_margin="30dp"
        android:background="@drawable/transparent_linear_layout"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fdfcfc">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_cit"
            android:textSize="@dimen/calorie_text_size"
            android:gravity="center"
            android:id="@+id/Cuser_name"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_marginTop="@dimen/diff_between_views_transparent_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_atleast"
            android:textSize="@dimen/calorie_text_size"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/diff_between_views_transparent_linear_layout"
            android:id="@+id/calorie_intake"
            android:textSize="@dimen/calorie_text_size"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/default_calories"
            />
        <TextView
            android:layout_marginTop="@dimen/diff_between_views_transparent_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calories_per_day"
            android:textSize="@dimen/calorie_text_size"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/nextHS"
        android:layout_below="@id/calorie_layout"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_level"
        android:text="@string/next"/>
</RelativeLayout>