<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainLoginActivity"
    android:orientation="vertical"
    android:background="@drawable/main_login_bg_gradient">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="20dp">
        
        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/logo"
            android:src="@drawable/logo_stay_fit"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/icon_height"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/email"
                android:layout_marginLeft="@dimen/left_margin_image_ML"
                />
            <EditText
                android:layout_width="@dimen/insert_dimen"
                android:layout_height="35dp"
                android:id="@+id/user_email"
                android:layout_marginLeft="@dimen/diff_views_ML"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"
                android:background="@drawable/button_level"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/diff_ll_ML"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/icon_height"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/password"
                android:layout_marginLeft="@dimen/left_margin_image_ML"/>
            <EditText
                android:layout_width="@dimen/insert_dimen"
                android:layout_height="35dp"
                android:id="@+id/user_password"
                android:inputType="textPassword"
                android:layout_marginLeft="@dimen/diff_views_ML"
                android:hint="@string/password"
                android:layout_gravity="center"
                android:background="@drawable/button_level"/>
        </LinearLayout>
        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:background="@drawable/button_level_main"
            android:layout_gravity="center"
            android:id="@+id/login_button"
            android:layout_marginTop="@dimen/diff_ll_ML"
            android:onClick="userLogin"/>
        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/google_signup"
            android:textAllCaps="false"
            android:id="@+id/gsign_button"
            android:background="@drawable/button_level_gsign"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/diff_ll_ML"
            android:onClick="GoogleSignUp"/>
    </LinearLayout>
</LinearLayout>